# cma

./: .gitignore  Dockerfile  Music Player workshop.ipynb  README.md  TODO.txt  assets.py  cma.py  cma_launcher.py  crate_writing.py  export.sh  functional_sql_gui.py  id3_codes.txt  launcher.py  playlist_builder.py  pyproject.toml  requirements.txt  run.sh  scratchlivedb workshop.ipynb  serato_query.py  seratopy crate work.ipynb  test_cma.py  tests to write.txt  tkinter workshop.ipynb  todo.txt
CMA/: __init__.py  assets.py  audio_player.py  cma.spec  config.py  gui.py  gui_helpers.py  helpers.py  launcher.py  playlist_magic.py  serato_advanced_classes.py  serato_basic_classes.py  smart_playlist.py
CMA/assets/: assets.py
CMA/code/: config.py  crate_writing.py  exceptions.py  helpers.py  serato_advanced_classes.py  serato_basic_classes.py  serato_query.py  serato_query_old.py  tools.py
CMA/config/: assets.py
CMA/gui/: audio_player.py  functional_sql_gui.py  gui.py  library_frame.py  playlist_builder.py  settings_window.py  smart_playlist.py  track_info.py
src/: launcher.py
src/config/: assets.py
src/gui/: gui.py
src/src/: helpers.py  serato_advanced_classes.py  serato_basic_classes.py
tests/: test_cma.py
