[tool.poetry]
name = "case_music_app"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.7"
gunicorn = "^20.1.0"
click = "^8.1.3"
python-dotenv = "^0.21.0"
mutagen = "^1.46.0"
musicbrainzngs = "^0.7.1"
beets = "^1.6.0"
pylast = "^5.1.0"
tkinterdnd2 = "^0.3.0"
typing-extensions = "^4.4.0"
pytest = "^7.2.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
